# remote-control

./: .dockerignore  .gitignore  AGENT.md  AGENTS.md  DEBUGGING.md  MEMORY.md  README.md  deploy.sh  docker-compose.yml  nginx-rc-proxy.conf  pom.xml  run_all_tests.ps1  smoke_test.js  test_design.md  test_diag.js  test_e2e_flow.js  test_http_api.js  test_path_security.js  test_ws_protocol.js  upload_test.js
agent/: __init__.py  __main__.py  _capture_smoke.py  _wgc_smoke.py  _ws_center.py  _ws_probe.py  _ws_startmenu.py  agent.py  capture.py  enhanced_screen.py  helper.py  input_inject.py  log_rotation.py  protocol.py  requirements.txt  run.bat  service.py  smoke_test_mouse.py  test_bg.py  video_encoder.py  wgc.py  ws_bridge.py  ws_protocol.py  启动.bat
android-cli/: SKILL.md  download_adb.py  download_mirror.py  download_socks.py  requirements.txt  ui.xml
common/: pom.xml
config-service/: DESIGN.md  Dockerfile  pom.xml
deploy/: .env.vps.example  .env.windows.example  README.md  build-tar.ps1  deploy-vps.ps1  install-windows-agent.ps1  remote-control.service  uninstall-windows-agent.ps1  vps-install.sh
docs/: ARCHITECTURE.md  AUTO_DEPLOY.md  CONFIG_CENTER_DESIGN.md  CONFIG_CENTER_IMPL.md  CONFIG_SERVER_JDBC.md  HTTPS.md  NACOS_INTEGRATION.md  OPENCLAW_IMPLEMENTATION.md  OPENCLAW_INTEGRATION.md  TASK_PROGRESS.md  TESTING.md  config-service-db.md  ops-service-db.md  user-service-db.md
eureka-server/: Dockerfile  pom.xml
remote-control/rust-relay/: Cargo.toml
remote-control/rust-relay/src/: main.rs
rust-relay/: Cargo.toml
rust-relay/src/: main.rs
(+135 files in other folders)
